src/test/ui/unboxed-closures/unboxed-closures-infer-argument-types-two-region-pointers.nll.stderr
error: lifetime may not live long enough
  --> $DIR/unboxed-closures-infer-argument-types-two-region-pointers.rs:17:9
   |
LL |     doit(0, &|x, y| {
   |               -  - has type `&'1 i32`
   |               |
   |               has type `&std::cell::Cell<&'2 i32>`
LL |         x.set(y);
   |         ^^^^^^^^ argument requires that `'1` must outlive `'2`

error: aborting due to previous error

